force-app/main/default/objects/Pulse__c/Pulse__c.object-meta.xml
<CustomObject>
    <label>Pulse</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD} -{0000}</displayFormat>
        <label>Pulse Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pulse</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>