force-app/main/default/objects/Pulse__c/fields/Current_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Current_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Subscription</label>
    <referenceTo>RecurSoft__Product_Subscription__c</referenceTo>
    <relationshipLabel>Pulse</relationshipLabel>
    <relationshipName>Pulse</relationshipName>
    <type>Lookup</type>
</CustomField>