force-app/main/default/objects/Pulse__c/fields/Pulse__c.field-meta.xml
<CustomField>
    <fullName>Pulse__c</fullName>
    <label>Pulse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Severe Risk</fullName>
                <color>#FF0000</color>
                <label>Severe Risk</label>
            </value>
            <value>
                <fullName>High Risk</fullName>
                <color>#FF9900</color>
                <label>High Risk</label>
            </value>
            <value>
                <fullName>Some Risk</fullName>
                <color>#FFFF66</color>
                <label>Some Risk</label>
            </value>
            <value>
                <fullName>Fairly Satisfied</fullName>
                <color>#33FFFF</color>
                <label>Fairly Satisfied</label>
            </value>
            <value>
                <fullName>Very Satisfied</fullName>
                <color>#33CCFF</color>
                <label>Very Satisfied</label>
            </value>
            <value>
                <fullName>Extremely Satisfied</fullName>
                <color>#3333FF</color>
                <label>Extremely Satisfied</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>