force-app/main/default/objects/Pulse__c/fields/Pusle_Value__c.field-meta.xml
<CustomField>
    <fullName>Pusle_Value__c</fullName>
    <formula>CASE( Pulse__c , &quot;Severe Risk&quot;, 1, &quot;High Risk&quot;, 2,&quot;Some Risk&quot;, 3, &quot;Fairly Satisfied&quot;, 4, &quot;Very Satisfied&quot;, 5, &quot;Extremely Satisfied&quot;, 6, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pusle Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>