force-app/main/default/objects/Pulse__c/fields/Risk_Meta_Theme__c.field-meta.xml
<CustomField>
    <fullName>Risk_Meta_Theme__c</fullName>
    <label>Risk Meta-Theme</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pulse__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Cancel_Meta_Themes</valueSetName>
    </valueSet>
</CustomField>