force-app/main/default/objects/Pulse__c/fields/Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reason__c</fullName>
    <label>Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Risk_Sub_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Cancel_Reason</valueSetName>
    </valueSet>
</CustomField>