force-app/main/default/objects/Pulse__c/fields/Risk_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Sub_Category__c</fullName>
    <label>Risk Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Risk_Meta_Theme__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Cancel_Sub_Category</valueSetName>
    </valueSet>
</CustomField>