force-app/main/default/objects/Pulse__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target</label>
    <referenceTo>ICU_Target__c</referenceTo>
    <relationshipLabel>Pulse</relationshipLabel>
    <relationshipName>Pulse</relationshipName>
    <type>Lookup</type>
</CustomField>